Fix broken GeoIp plugin

Instead of the broken custom logic use only the system provided lib.

BUG: 403054
FIXED-IN: 21.08